Bug Fixes in the main module. User can input name and call the recommender function to recommend a movie.

--- a/scratch_roughwork.ipynb
+++ b/scratch_roughwork.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.457002Z",
-     "start_time": "2023-11-23T05:57:12.325545Z"
+     "end_time": "2023-11-23T07:02:46.388057Z",
+     "start_time": "2023-11-23T07:02:46.324601Z"
     }
    },
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -50,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.464286Z",
-     "start_time": "2023-11-23T05:57:13.456487Z"
+     "end_time": "2023-11-23T07:02:46.391105Z",
+     "start_time": "2023-11-23T07:02:46.338984Z"
     }
    },
    "id": "bcbb8d9a5e564b3"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -85,8 +85,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.469920Z",
-     "start_time": "2023-11-23T05:57:13.463058Z"
+     "end_time": "2023-11-23T07:02:46.391499Z",
+     "start_time": "2023-11-23T07:02:46.357479Z"
     }
    },
    "id": "f50a2cf98dabc11"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -178,8 +178,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.475413Z",
-     "start_time": "2023-11-23T05:57:13.466381Z"
+     "end_time": "2023-11-23T07:02:46.397157Z",
+     "start_time": "2023-11-23T07:02:46.366939Z"
     }
    },
    "id": "87de1d7e1dd09bf7"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -272,8 +272,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.541254Z",
-     "start_time": "2023-11-23T05:57:13.476617Z"
+     "end_time": "2023-11-23T07:02:46.397372Z",
+     "start_time": "2023-11-23T07:02:46.380812Z"
     }
    },
    "id": "71918c7c84185de4"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "user_movie_matrix = pd.pivot_table(df, values='Rating', index=user_ids, columns=movie_ids, fill_value=0)\n",
@@ -299,8 +299,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.541626Z",
-     "start_time": "2023-11-23T05:57:13.484844Z"
+     "end_time": "2023-11-23T07:02:46.398604Z",
+     "start_time": "2023-11-23T07:02:46.390316Z"
     }
    },
    "id": "447d3a8b5dabb56d"
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "def recommend_movies_with_names(user, top_n=5):\n",
@@ -343,8 +343,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:13.541706Z",
-     "start_time": "2023-11-23T05:57:13.495236Z"
+     "end_time": "2023-11-23T07:02:46.406331Z",
+     "start_time": "2023-11-23T07:02:46.397720Z"
     }
    },
    "id": "8b0ce859996eec4a"
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -380,14 +380,15 @@
     }
    ],
    "source": [
-    "top_user_recommendations_with_names = recommend_movies_with_names(\"Alice\", top_n=3)\n",
+    "user_name = str(input(\"What is your Name? \"))\n",
+    "top_user_recommendations_with_names = recommend_movies_with_names(user_name, top_n=3)\n",
     "print(tabulate(top_user_recommendations_with_names, headers='keys', tablefmt='fancy_grid'))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T05:57:32.539436Z",
-     "start_time": "2023-11-23T05:57:32.521911Z"
+     "end_time": "2023-11-23T07:02:49.965784Z",
+     "start_time": "2023-11-23T07:02:46.400947Z"
     }
    },
    "id": "2753a05406eee976"
