Keep the changes before any new updates.

--- a/scratch_roughwork.ipynb
+++ b/scratch_roughwork.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -375,20 +375,23 @@
       "│  1 │ Star Wars    │           0.945625 │\n",
       "├────┼──────────────┼────────────────────┤\n",
       "│  2 │ Pulp Fiction │           0.660141 │\n",
+      "├────┼──────────────┼────────────────────┤\n",
+      "│  3 │ Matrix       │           0.464847 │\n",
       "╘════╧══════════════╧════════════════════╛\n"
      ]
     }
    ],
    "source": [
-    "user_name = str(input(\"What is your Name? \"))\n",
-    "top_user_recommendations_with_names = recommend_movies_with_names(user_name, top_n=3)\n",
+    "user_name = str(input(\"What is your Name? \")).replace(\" \", \"\")\n",
+    "movies = int(input('How many movies do you want listed? '))\n",
+    "top_user_recommendations_with_names = recommend_movies_with_names(user_name, top_n=movies)\n",
     "print(tabulate(top_user_recommendations_with_names, headers='keys', tablefmt='fancy_grid'))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T07:02:49.965784Z",
-     "start_time": "2023-11-23T07:02:46.400947Z"
+     "end_time": "2023-11-23T07:20:30.134479Z",
+     "start_time": "2023-11-23T07:20:22.627118Z"
     }
    },
    "id": "2753a05406eee976"
